Bug 158652 - List of comments in Navigator does not update automatically
Summary: List of comments in Navigator does not update automatically
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:24.8.0 target:24.2.1
Keywords:
: 129608 (view as bug list)
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2023-12-11 23:42 UTC by Rafael Lima
Modified: 2024-04-22 15:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2023-12-11 23:42:36 UTC
In Calc, when you insert comments to the document the "Comments" section in the Navigator does not update automatically after inserting the second comment.

Steps to reproduce:
1) Open Calc and make sure the Navigator sidebar is visible.
2) Select any cell and insert a comment (with any text)
3) Notice that the "Comments" section can now be expanded because there is one comment. So click the ">" sign to expand the Comments.
4) Now create another comment in any other cell with any text
5) Notice that the comment will not appear in the Navigator

If you keep adding comments, they will not appear in the Navigator.

They'll only appear after you right-click a comment and then choose "Show comment".

Present in

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 12; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.6.4-0ubuntu0.23.10.1
Calc: threaded

Also in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7b3b97efbfeae6ef5d8fbe4e4e27b5b765d3eb08
CPU threads: 12; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Rafael Lima 2023-12-12 00:10:10 UTC
Also, deleting a comment does not update the Navigator.
Comment 2 Oliver Specht (CIB) 2023-12-12 15:09:29 UTC
confirmed
Comment 3 Commit Notification 2023-12-22 08:59:41 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0097f8595791f4bbf499ebd423f4f80ec8e38dbe

tdf#158652 notify navigator on insert/edit/delete comment

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2024-01-07 16:44:28 UTC
Can this be closed as fixed?
Comment 5 Rafael Lima 2024-01-08 20:43:40 UTC
(In reply to Buovjaga from comment #4)
> Can this be closed as fixed?

I've just tested with the latest master and the patch indeed fixes the problem.

Thanks Oliver for the patch!

Tested with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8c822b764b35a0116a0865e991a87c8315e005ab
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2024-01-28 19:58:19 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/118e6cc0921849216e1fc3eb8d2f7dbb53463b26

tdf#158652 notify navigator on insert/edit/delete comment

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2024-01-29 07:28:03 UTC
Thanks Rafael and Oliver.

Updating well the Navigator in
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c249e910992d5da840989a1f2bea9da1c6d0fcbb
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Bad in Version: 24.2 (for reference)
24.2.0.2 (X86_64) / LibreOffice Community
Build ID: b1fd3a6f0759c6f806568e15c957f97194bbec8f
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 8 Justin L 2024-04-22 15:11:51 UTC
*** Bug 129608 has been marked as a duplicate of this bug. ***