tdf#158652 notify navigator on insert/edit/delete comment

links changes of the drawing engine to comments as it was
done before with pictures, shapes and OLE objects
ui unit test included

Change-Id: I4fde3a82b80e73758fb3da94ed2553453d09e9ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160624
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit 0097f8595791f4bbf499ebd423f4f80ec8e38dbe)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162381
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>